
export default abstract class Product {
  abstract use(): void;
}
